<resources>
    <string name="app_name">APMS</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="example">Example</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_read_data">ReadData</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!--    symbols-->
    <string name="degree">°</string>
    <string name="temp"> °C</string>
    <string name="humid">%</string>
    <string name="ppm">ppm</string>
</resources>